k8s/istio-system/routes/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: istio-system
  hostnames:
    - argocd.k8s-ingress-gw.win-ts.int
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
