k8s/istio-system/routes/awx-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: awx
  namespace: awx
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: istio-system
  hostnames:
    - awx.k8s-ingress-gw.win-ts.int
  rules:
    - backendRefs:
        - name: awx-service
          port: 80
