k8s/istio-system/routes/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: istio-system
  hostnames:
    - grafana.k8s-ingress-gw.win-ts.int
  rules:
    - backendRefs:
        - name: monitoring-grafana
          port: 80
